# forecaster

./: .env.template  community_benchmark.py  main.py  main_with_no_framework.py  pyproject.toml
.github/workflows/: run-top-model-bot.yml  run-top-model-bot2.yml
bots/: __init__.py
