[tool.poetry]
name = "ai-forecasting-bots"
version = "0.1.0"
description = "AI forecasting bots based on the Q1 2025 Metaculus Benchmark report."
authors = ["samuelukwu27@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
openai = "^1.23.6"
forecasting-tools = {git = "https://www.google.com/search?q=https://github.com/Metaculus/forecasting-tools.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
